# musiclists

./: .gitignore  README.md  prog.json  pyproject.toml  setup.py
data/: prog.polars
export/: aoty.md
src/: .dedup.py.kate-swp  .dump.py.kate-swp  compare.py  copy.py  dedup.py  diff.py  download.py  dump.py  error.py  export.py  files.py  get.py  load.py  ouput.py  output.py  save.py  search.py  verify.py  write.py
src/attributes/: local_dirs.py
src/classes/: Album.py  DuplicatesList.py  MusicList.py
src/debug/: logging.py  test_data.py
src/decorators/: choice.py  commands.py  data.py  decorators.py  groups.py  number.py  path.py  score.py  types.py
src/defaults/: choice.py  defaults.py  download.py  html_tags.py  path.py
src/get/: album.py  data.py  df.py  file.py  files.py
src/html_tags/: aoty.py  prog.py
src/scripts/: musiclists.py
